--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.25.3",
+    "@heroicons/react": "^2.1.5",
+    "@mapbox/mapbox-sdk": "^0.16.0",
+    "axios": "^1.7.5",
+    "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/mapbox__mapbox-sdk": "^0.15.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-speech-recognition": "^3.9.5",
